--- a/mysite/polls/templates/polls/css/style.css
+++ b/mysite/polls/templates/polls/css/style.css
@@ -133,8 +133,9 @@ ul.social-in li  i:hover{
 	font-size: 1.5em;
 	color:#000;
 	line-height: 1.8em;
-	text-transform:uppercase
-	margin-bottom: 4%;
+	text-transform:uppercase;
+	margin-bottom :  4%;
+	
 }
 .h_nav h4.top{
 	margin-top: 12%;
