--- a/mysite/polls/templates/polls/single.html
+++ b/mysite/polls/templates/polls/single.html
@@ -83,7 +83,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 		{% include "polls/includes/header-bottom.html"%}
 
 		<div class="page">
-			<h6><a href="#">Page Title</a><b>|</b>Page description The quick, brown <span class="for">fox jumps over a lazy dog. DJs flock by when TV ax quiz prog.</span></h6>
+			
 		</div>
 		<div class="content">
 			<div class="col-md-9">
@@ -126,9 +126,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 								<li>Size:<select>
 									<option>Large</option>
 									<option>Medium</option>
-									<option>small</option>
-									<option>Large</option>
-									<option>small</option>
+									<option>Small</option>
 								</select></li>
 								<li>Cost:
 										<select>
