--- a/mysite/polls/templates/polls/includes/footer.html
+++ b/mysite/polls/templates/polls/includes/footer.html
@@ -1,6 +1,6 @@
 
 <div class="footer">
-    <p class="footer-class">© 2015 Mihstore All Rights Reserved | Template by  <a href="http://w3layouts.com/" target="_blank">W3layouts</a> </p>
+    <p class="footer-class">© 2019 K40CNTT All Rights Reserved | Template by TranHuuPhu'team</a> </p>
         <a href="#home" class="scroll to-Top" >  GO TO TOP!</a>
 <div class="clearfix"> </div>
 </div>
