--- a/mysite/polls/templates/polls/includes/header.html
+++ b/mysite/polls/templates/polls/includes/header.html
@@ -1,12 +1,17 @@
 {% load static %}
 <div class="header" id="home">	
-    <div class="header-para">
-        <p>The quick brown <span>fox jumps over a lazy dog. DJs flock by when MTV ax quiz prog.</span></p>	
+    <div class="header-para">	
     </div>	
     <ul class="header-in">
-        <li><a href="{% url 'account' %}">MY ACCOUNT</a> </li>
+        <li>	{% if user.username %}
+                    <p>Xin chào {{user.username}}</p>
+                      <p><a href="{% url 'logout' %}">Đăng xuất</a></p>
+                {% else %}
+                    <p><a href="{% url 'register' %}">Đăng ký</a>|<a href="{%url 'account' %}">Đăng nhập</a></p>
+                {% endif %}
+        </li>
         <li><a href="{% url 'wishlist' %}">  WISHLIST</a></li>
         <li ><a href="{% url 'contact' %}" > CONTACT US</a></li>
     </ul>
         <div class="clearfix"> </div>
-</div>
+</div>			
